--- a/README
+++ b/README
@@ -13,4 +13,6 @@ Additional information can be found in _documents folder.
 Code have been being developed with Qt and Visual Studio (not needed to build). Using libpcap and qwt libs (included).
 Note that it is not production-grade code, it's kinda handy tool for various manipulations with IEC61850-9.2. There is much C-like code in this masterpiece.
 
+Works under Windows and Linux.
+
 Distributed under Apache 2.0 license
